// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBlockNameFromUniqueID Should return the block name 1`] = `"button-maxi"`;

exports[`getBlockNameFromUniqueID Should return the block name, when uniqueID is big digit 1`] = `"text-maxi"`;

exports[`getBlockSelectorsByUniqueID Should return accordion selectors 1`] = `
Object {
  "a ac": Object {
    "h": Object {
      "label": "accordion ::after on hover",
      "target": ":hover::after",
    },
    "n": Object {
      "label": "accordion ::after",
      "target": "::after",
    },
  },
  "ac": Object {
    "h": Object {
      "label": "accordion on hover",
      "target": ":hover",
    },
    "n": Object {
      "label": "accordion",
      "target": "",
    },
  },
  "b ac": Object {
    "h": Object {
      "label": "accordion ::block on hover",
      "target": ":hover::block",
    },
    "n": Object {
      "label": "accordion ::block",
      "target": "::block",
    },
  },
  "pa cn": Object {
    "h": Object {
      "label": "pane content on hover",
      "target": " .maxi-pane-block[aria-expanded] .maxi-pane-block__content:hover",
    },
    "n": Object {
      "label": "pane content",
      "target": " .maxi-pane-block[aria-expanded] .maxi-pane-block__content",
    },
  },
  "pa cn ln": Object {
    "active": Object {
      "label": "content line on active state",
      "target": " .maxi-pane-block[aria-expanded=true] .maxi-pane-block__content-line",
    },
    "h": Object {
      "label": "content line on hover",
      "target": " .maxi-pane-block[aria-expanded] .maxi-pane-block__content-line:hover",
    },
    "n": Object {
      "label": "content line",
      "target": " .maxi-pane-block[aria-expanded] .maxi-pane-block__content-line",
    },
  },
  "pa he": Object {
    "active": Object {
      "label": "pane header on active state",
      "target": " .maxi-pane-block[aria-expanded=true] .maxi-pane-block__header",
    },
    "h": Object {
      "label": "pane header on hover",
      "target": " .maxi-pane-block[aria-expanded] .maxi-pane-block__header:hover",
    },
    "n": Object {
      "label": "pane header",
      "target": " .maxi-pane-block[aria-expanded] .maxi-pane-block__header",
    },
  },
  "pa he cn": Object {
    "active": Object {
      "label": "header content on active state",
      "target": " .maxi-pane-block[aria-expanded=true] .maxi-pane-block__header-content",
    },
    "h": Object {
      "label": "header content on hover",
      "target": " .maxi-pane-block[aria-expanded] .maxi-pane-block__header-content:hover",
    },
    "n": Object {
      "label": "header content",
      "target": " .maxi-pane-block[aria-expanded] .maxi-pane-block__header-content",
    },
  },
  "pa he ln": Object {
    "active": Object {
      "label": "header line on active state",
      "target": " .maxi-pane-block[aria-expanded=true] .maxi-pane-block__header-line",
    },
    "h": Object {
      "label": "header line on hover",
      "target": " .maxi-pane-block[aria-expanded] .maxi-pane-block__header-line:hover",
    },
    "n": Object {
      "label": "header line",
      "target": " .maxi-pane-block[aria-expanded] .maxi-pane-block__header-line",
    },
  },
  "pa i": Object {
    "active": Object {
      "label": "active icon",
      "target": " .maxi-pane-block[aria-expanded=true] .maxi-pane-block__icon",
    },
    "activeInsideSvg": Object {
      "label": "everything inside active svg (svg > *)",
      "target": " .maxi-pane-block[aria-expanded=true] .maxi-pane-block__icon svg > *",
    },
    "activePath": Object {
      "label": "active svg's path",
      "target": " .maxi-pane-block[aria-expanded=true] .maxi-pane-block__icon svg path",
    },
    "activeSvg": Object {
      "label": "active icon's svg",
      "target": " .maxi-pane-block[aria-expanded=true] .maxi-pane-block__icon svg",
    },
    "h": Object {
      "label": "icon on hover",
      "target": " .maxi-pane-block[aria-expanded] .maxi-pane-block__icon:hover",
    },
    "hoverInsideSvg": Object {
      "label": "everything inside svg on hover (:hover svg > *)",
      "target": " .maxi-pane-block[aria-expanded] .maxi-pane-block__icon:hover svg > *",
    },
    "hoverPath": Object {
      "label": "svg's path on hover",
      "target": " .maxi-pane-block[aria-expanded] .maxi-pane-block__icon:hover svg path",
    },
    "hoverSvg": Object {
      "label": "icon's svg on hover",
      "target": " .maxi-pane-block[aria-expanded] .maxi-pane-block__icon:hover svg",
    },
    "insideSvg": Object {
      "label": "everything inside svg (svg > *)",
      "target": " .maxi-pane-block[aria-expanded] .maxi-pane-block__icon svg > *",
    },
    "n": Object {
      "label": "icon",
      "target": " .maxi-pane-block[aria-expanded] .maxi-pane-block__icon",
    },
    "path": Object {
      "label": "svg's path",
      "target": " .maxi-pane-block[aria-expanded] .maxi-pane-block__icon svg path",
    },
    "svg": Object {
      "label": "icon's svg",
      "target": " .maxi-pane-block[aria-expanded] .maxi-pane-block__icon svg",
    },
  },
}
`;

exports[`getBlockSelectorsByUniqueID Should return button selectors 1`] = `
Object {
  "a bt": Object {
    "h": Object {
      "label": "button ::after on hover",
      "target": " .maxi-button-block__button:hover::after",
    },
    "n": Object {
      "label": "button ::after",
      "target": " .maxi-button-block__button::after",
    },
  },
  "a c": Object {
    "h": Object {
      "label": "canvas ::after on hover",
      "target": ":hover::after",
    },
    "n": Object {
      "label": "canvas ::after",
      "target": "::after",
    },
  },
  "b bt": Object {
    "h": Object {
      "label": "button ::block on hover",
      "target": " .maxi-button-block__button:hover::block",
    },
    "n": Object {
      "label": "button ::block",
      "target": " .maxi-button-block__button::block",
    },
  },
  "b c": Object {
    "h": Object {
      "label": "canvas ::block on hover",
      "target": ":hover::block",
    },
    "n": Object {
      "label": "canvas ::block",
      "target": "::block",
    },
  },
  "bt": Object {
    "h": Object {
      "label": "button on hover",
      "target": " .maxi-button-block__button:hover",
    },
    "n": Object {
      "label": "button",
      "target": " .maxi-button-block__button",
    },
  },
  "c": Object {
    "h": Object {
      "label": "canvas on hover",
      "target": ":hover",
    },
    "n": Object {
      "label": "canvas",
      "target": "",
    },
  },
  "i": Object {
    "h": Object {
      "label": "icon on hover",
      "target": " .maxi-button-block__icon:hover",
    },
    "hoverInsideSvg": Object {
      "label": "everything inside svg on hover (:hover svg > *)",
      "target": " .maxi-button-block__icon:hover svg > *",
    },
    "hoverPath": Object {
      "label": "svg's path on hover",
      "target": " .maxi-button-block__icon:hover svg path",
    },
    "hoverSvg": Object {
      "label": "icon's svg on hover",
      "target": " .maxi-button-block__icon:hover svg",
    },
    "insideSvg": Object {
      "label": "everything inside svg (svg > *)",
      "target": " .maxi-button-block__icon svg > *",
    },
    "n": Object {
      "label": "icon",
      "target": " .maxi-button-block__icon",
    },
    "path": Object {
      "label": "svg's path",
      "target": " .maxi-button-block__icon svg path",
    },
    "svg": Object {
      "label": "icon's svg",
      "target": " .maxi-button-block__icon svg",
    },
  },
}
`;

exports[`getBlockSelectorsByUniqueID Should return column selectors 1`] = `
Object {
  "a cl": Object {
    "h": Object {
      "label": "column ::after on hover",
      "target": ":hover::after",
    },
    "n": Object {
      "label": "column ::after",
      "target": "::after",
    },
  },
  "b cl": Object {
    "h": Object {
      "label": "column ::block on hover",
      "target": ":hover::block",
    },
    "n": Object {
      "label": "column ::block",
      "target": "::block",
    },
  },
  "cl": Object {
    "h": Object {
      "label": "column on hover",
      "target": ":hover",
    },
    "n": Object {
      "label": "column",
      "target": "",
    },
  },
}
`;

exports[`getBlockSelectorsByUniqueID Should return container selectors 1`] = `
Object {
  "a ct": Object {
    "h": Object {
      "label": "container ::after on hover",
      "target": ":hover::after",
    },
    "n": Object {
      "label": "container ::after",
      "target": "::after",
    },
  },
  "b ct": Object {
    "h": Object {
      "label": "container ::block on hover",
      "target": ":hover::block",
    },
    "n": Object {
      "label": "container ::block",
      "target": "::block",
    },
  },
  "bot sh d": Object {
    "h": Object {
      "label": "bottom shape divider on hover",
      "target": " .maxi-shape-divider__bottom:hover",
    },
    "n": Object {
      "label": "bottom shape divider",
      "target": " .maxi-shape-divider__bottom",
    },
  },
  "ct": Object {
    "h": Object {
      "label": "container on hover",
      "target": ":hover",
    },
    "n": Object {
      "label": "container",
      "target": "",
    },
  },
  "t sh d": Object {
    "h": Object {
      "label": "top shape divider on hover",
      "target": " .maxi-shape-divider__top:hover",
    },
    "n": Object {
      "label": "top shape divider",
      "target": " .maxi-shape-divider__top",
    },
  },
}
`;

exports[`getBlockSelectorsByUniqueID Should return divider selectors 1`] = `
Object {
  "a c": Object {
    "h": Object {
      "label": "canvas ::after on hover",
      "target": ":hover::after",
    },
    "n": Object {
      "label": "canvas ::after",
      "target": "::after",
    },
  },
  "a d": Object {
    "h": Object {
      "label": "divider ::after on hover",
      "target": " .maxi-divider-block__divider:hover::after",
    },
    "n": Object {
      "label": "divider ::after",
      "target": " .maxi-divider-block__divider::after",
    },
  },
  "b c": Object {
    "h": Object {
      "label": "canvas ::block on hover",
      "target": ":hover::block",
    },
    "n": Object {
      "label": "canvas ::block",
      "target": "::block",
    },
  },
  "b d": Object {
    "h": Object {
      "label": "divider ::block on hover",
      "target": " .maxi-divider-block__divider:hover::block",
    },
    "n": Object {
      "label": "divider ::block",
      "target": " .maxi-divider-block__divider::block",
    },
  },
  "c": Object {
    "h": Object {
      "label": "canvas on hover",
      "target": ":hover",
    },
    "n": Object {
      "label": "canvas",
      "target": "",
    },
  },
  "d": Object {
    "h": Object {
      "label": "divider on hover",
      "target": " .maxi-divider-block__divider:hover",
    },
    "n": Object {
      "label": "divider",
      "target": " .maxi-divider-block__divider",
    },
  },
}
`;

exports[`getBlockSelectorsByUniqueID Should return group selectors 1`] = `
Object {
  "a g": Object {
    "h": Object {
      "label": "group ::after on hover",
      "target": ":hover::after",
    },
    "n": Object {
      "label": "group ::after",
      "target": "::after",
    },
  },
  "b g": Object {
    "h": Object {
      "label": "group ::block on hover",
      "target": ":hover::block",
    },
    "n": Object {
      "label": "group ::block",
      "target": "::block",
    },
  },
  "g": Object {
    "h": Object {
      "label": "group on hover",
      "target": ":hover",
    },
    "n": Object {
      "label": "group",
      "target": "",
    },
  },
}
`;

exports[`getBlockSelectorsByUniqueID Should return image selectors 1`] = `
Object {
  "a c": Object {
    "h": Object {
      "label": "canvas ::after on hover",
      "target": ":hover::after",
    },
    "n": Object {
      "label": "canvas ::after",
      "target": "::after",
    },
  },
  "a im": Object {
    "h": Object {
      "label": "image ::after on hover",
      "target": " .maxi-image-block__image:hover::after",
    },
    "n": Object {
      "label": "image ::after",
      "target": " .maxi-image-block__image::after",
    },
  },
  "b c": Object {
    "h": Object {
      "label": "canvas ::block on hover",
      "target": ":hover::block",
    },
    "n": Object {
      "label": "canvas ::block",
      "target": "::block",
    },
  },
  "b im": Object {
    "h": Object {
      "label": "image ::block on hover",
      "target": " .maxi-image-block__image:hover::block",
    },
    "n": Object {
      "label": "image ::block",
      "target": " .maxi-image-block__image::block",
    },
  },
  "c": Object {
    "h": Object {
      "label": "canvas on hover",
      "target": ":hover",
    },
    "n": Object {
      "label": "canvas",
      "target": "",
    },
  },
  "im": Object {
    "h": Object {
      "label": "image on hover",
      "target": " .maxi-image-block__image:hover",
    },
    "n": Object {
      "label": "image",
      "target": " .maxi-image-block__image",
    },
  },
}
`;

exports[`getBlockSelectorsByUniqueID Should return map selectors 1`] = `
Object {
  "a de": Object {
    "h": Object {
      "label": "description ::after on hover",
      "target": " .maxi-map-block__popup__content__description:hover::after",
    },
    "n": Object {
      "label": "description ::after",
      "target": " .maxi-map-block__popup__content__description::after",
    },
  },
  "a m": Object {
    "h": Object {
      "label": "map ::after on hover",
      "target": ":hover::after",
    },
    "n": Object {
      "label": "map ::after",
      "target": "::after",
    },
  },
  "a po": Object {
    "h": Object {
      "label": "popup ::after on hover",
      "target": " .maxi-map-block__popup:hover::after",
    },
    "n": Object {
      "label": "popup ::after",
      "target": " .maxi-map-block__popup::after",
    },
  },
  "a ti": Object {
    "h": Object {
      "label": "title ::after on hover",
      "target": " .maxi-map-block__popup__content__title:hover::after",
    },
    "n": Object {
      "label": "title ::after",
      "target": " .maxi-map-block__popup__content__title::after",
    },
  },
  "b de": Object {
    "h": Object {
      "label": "description ::block on hover",
      "target": " .maxi-map-block__popup__content__description:hover::block",
    },
    "n": Object {
      "label": "description ::block",
      "target": " .maxi-map-block__popup__content__description::block",
    },
  },
  "b m": Object {
    "h": Object {
      "label": "map ::block on hover",
      "target": ":hover::block",
    },
    "n": Object {
      "label": "map ::block",
      "target": "::block",
    },
  },
  "b po": Object {
    "h": Object {
      "label": "popup ::block on hover",
      "target": " .maxi-map-block__popup:hover::block",
    },
    "n": Object {
      "label": "popup ::block",
      "target": " .maxi-map-block__popup::block",
    },
  },
  "b ti": Object {
    "h": Object {
      "label": "title ::block on hover",
      "target": " .maxi-map-block__popup__content__title:hover::block",
    },
    "n": Object {
      "label": "title ::block",
      "target": " .maxi-map-block__popup__content__title::block",
    },
  },
  "de": Object {
    "h": Object {
      "label": "description on hover",
      "target": " .maxi-map-block__popup__content__description:hover",
    },
    "n": Object {
      "label": "description",
      "target": " .maxi-map-block__popup__content__description",
    },
  },
  "m": Object {
    "h": Object {
      "label": "map on hover",
      "target": ":hover",
    },
    "n": Object {
      "label": "map",
      "target": "",
    },
  },
  "po": Object {
    "h": Object {
      "label": "popup on hover",
      "target": " .maxi-map-block__popup:hover",
    },
    "n": Object {
      "label": "popup",
      "target": " .maxi-map-block__popup",
    },
  },
  "ti": Object {
    "h": Object {
      "label": "title on hover",
      "target": " .maxi-map-block__popup__content__title:hover",
    },
    "n": Object {
      "label": "title",
      "target": " .maxi-map-block__popup__content__title",
    },
  },
}
`;

exports[`getBlockSelectorsByUniqueID Should return number-counter selectors 1`] = `
Object {
  "a c": Object {
    "h": Object {
      "label": "canvas ::after on hover",
      "target": ":hover::after",
    },
    "n": Object {
      "label": "canvas ::after",
      "target": "::after",
    },
  },
  "a nu": Object {
    "h": Object {
      "label": "number ::after on hover",
      "target": " .maxi-number-counter__box__text:hover::after",
    },
    "n": Object {
      "label": "number ::after",
      "target": " .maxi-number-counter__box__text::after",
    },
  },
  "b c": Object {
    "h": Object {
      "label": "canvas ::block on hover",
      "target": ":hover::block",
    },
    "n": Object {
      "label": "canvas ::block",
      "target": "::block",
    },
  },
  "b nu": Object {
    "h": Object {
      "label": "number ::block on hover",
      "target": " .maxi-number-counter__box__text:hover::block",
    },
    "n": Object {
      "label": "number ::block",
      "target": " .maxi-number-counter__box__text::block",
    },
  },
  "c": Object {
    "h": Object {
      "label": "canvas on hover",
      "target": ":hover",
    },
    "n": Object {
      "label": "canvas",
      "target": "",
    },
  },
  "cr": Object {
    "h": Object {
      "label": "circle on hover",
      "target": " .maxi-number-counter__box__circle:hover",
    },
    "n": Object {
      "label": "circle",
      "target": " .maxi-number-counter__box__circle",
    },
  },
  "nu": Object {
    "h": Object {
      "label": "number on hover",
      "target": " .maxi-number-counter__box__text:hover",
    },
    "n": Object {
      "label": "number",
      "target": " .maxi-number-counter__box__text",
    },
  },
}
`;

exports[`getBlockSelectorsByUniqueID Should return pane selectors 1`] = `
Object {
  "a pa": Object {
    "active": Object {
      "label": "pane ::after on active state",
      "target": ".maxi-pane-block[aria-expanded=true]::after",
    },
    "h": Object {
      "label": "pane ::after on hover",
      "target": ":h::after",
    },
    "n": Object {
      "label": "pane ::after",
      "target": "::after",
    },
  },
  "be pa": Object {
    "active": Object {
      "label": "pane ::before on active state",
      "target": ".maxi-pane-block[aria-expanded=true]::before",
    },
    "h": Object {
      "label": "pane ::before on hover",
      "target": ":h::before",
    },
    "n": Object {
      "label": "pane ::before",
      "target": "::before",
    },
  },
  "cn": Object {
    "h": Object {
      "label": "pane content on hover",
      "target": ".maxi-pane-block[aria-expanded] .maxi-pane-block__content:hover",
    },
    "n": Object {
      "label": "pane content",
      "target": ".maxi-pane-block[aria-expanded] .maxi-pane-block__content",
    },
  },
  "cn ln": Object {
    "active": Object {
      "label": "content line on active state",
      "target": ".maxi-pane-block[aria-expanded=true] .maxi-pane-block__content-line",
    },
    "h": Object {
      "label": "content line on hover",
      "target": ".maxi-pane-block[aria-expanded] .maxi-pane-block__content-line:hover",
    },
    "n": Object {
      "label": "content line",
      "target": ".maxi-pane-block[aria-expanded] .maxi-pane-block__content-line",
    },
  },
  "he": Object {
    "active": Object {
      "label": "pane header on active state",
      "target": ".maxi-pane-block[aria-expanded=true] .maxi-pane-block__header",
    },
    "h": Object {
      "label": "pane header on hover",
      "target": ".maxi-pane-block[aria-expanded] .maxi-pane-block__header:hover",
    },
    "n": Object {
      "label": "pane header",
      "target": ".maxi-pane-block[aria-expanded] .maxi-pane-block__header",
    },
  },
  "he cn": Object {
    "active": Object {
      "label": "header content on active state",
      "target": ".maxi-pane-block[aria-expanded=true] .maxi-pane-block__header-content",
    },
    "h": Object {
      "label": "header content on hover",
      "target": ".maxi-pane-block[aria-expanded] .maxi-pane-block__header-content:hover",
    },
    "n": Object {
      "label": "header content",
      "target": ".maxi-pane-block[aria-expanded] .maxi-pane-block__header-content",
    },
  },
  "he ln": Object {
    "active": Object {
      "label": "header line on active state",
      "target": ".maxi-pane-block[aria-expanded=true] .maxi-pane-block__header-line",
    },
    "h": Object {
      "label": "header line on hover",
      "target": ".maxi-pane-block[aria-expanded] .maxi-pane-block__header-line:hover",
    },
    "n": Object {
      "label": "header line",
      "target": ".maxi-pane-block[aria-expanded] .maxi-pane-block__header-line",
    },
  },
  "i": Object {
    "active": Object {
      "label": "active icon",
      "target": ".maxi-pane-block[aria-expanded=true] .maxi-pane-block__icon",
    },
    "activeInsideSvg": Object {
      "label": "everything inside active svg (svg > *)",
      "target": ".maxi-pane-block[aria-expanded=true] .maxi-pane-block__icon svg > *",
    },
    "activePath": Object {
      "label": "active svg's path",
      "target": ".maxi-pane-block[aria-expanded=true] .maxi-pane-block__icon svg path",
    },
    "activeSvg": Object {
      "label": "active icon's svg",
      "target": ".maxi-pane-block[aria-expanded=true] .maxi-pane-block__icon svg",
    },
    "h": Object {
      "label": "icon on hover",
      "target": ".maxi-pane-block[aria-expanded] .maxi-pane-block__icon:hover",
    },
    "hoverInsideSvg": Object {
      "label": "everything inside svg on hover (:hover svg > *)",
      "target": ".maxi-pane-block[aria-expanded] .maxi-pane-block__icon:hover svg > *",
    },
    "hoverPath": Object {
      "label": "svg's path on hover",
      "target": ".maxi-pane-block[aria-expanded] .maxi-pane-block__icon:hover svg path",
    },
    "hoverSvg": Object {
      "label": "icon's svg on hover",
      "target": ".maxi-pane-block[aria-expanded] .maxi-pane-block__icon:hover svg",
    },
    "insideSvg": Object {
      "label": "everything inside svg (svg > *)",
      "target": ".maxi-pane-block[aria-expanded] .maxi-pane-block__icon svg > *",
    },
    "n": Object {
      "label": "icon",
      "target": ".maxi-pane-block[aria-expanded] .maxi-pane-block__icon",
    },
    "path": Object {
      "label": "svg's path",
      "target": ".maxi-pane-block[aria-expanded] .maxi-pane-block__icon svg path",
    },
    "svg": Object {
      "label": "icon's svg",
      "target": ".maxi-pane-block[aria-expanded] .maxi-pane-block__icon svg",
    },
  },
  "pa": Object {
    "active": Object {
      "label": "pane on active state",
      "target": ".maxi-pane-block[aria-expanded=true]",
    },
    "h": Object {
      "label": "pane on hover",
      "target": ":hover",
    },
    "n": Object {
      "label": "pane",
      "target": "",
    },
  },
}
`;

exports[`getBlockSelectorsByUniqueID Should return row selectors 1`] = `
Object {
  "a ro": Object {
    "h": Object {
      "label": "row ::after on hover",
      "target": ":hover::after",
    },
    "n": Object {
      "label": "row ::after",
      "target": "::after",
    },
  },
  "b ro": Object {
    "h": Object {
      "label": "row ::block on hover",
      "target": ":hover::block",
    },
    "n": Object {
      "label": "row ::block",
      "target": "::block",
    },
  },
  "ro": Object {
    "h": Object {
      "label": "row on hover",
      "target": ":hover",
    },
    "n": Object {
      "label": "row",
      "target": "",
    },
  },
}
`;

exports[`getBlockSelectorsByUniqueID Should return search selectors 1`] = `
Object {
  "a b": Object {
    "h": Object {
      "label": "block ::after on hover",
      "target": "::after:hover::block",
    },
    "n": Object {
      "label": "block ::after",
      "target": "::after",
    },
  },
  "a bt": Object {
    "h": Object {
      "label": "button ::after on hover",
      "target": " .maxi-search-block__button:hover::after",
    },
    "n": Object {
      "label": "button ::after",
      "target": " .maxi-search-block__button::after",
    },
  },
  "a in": Object {
    "h": Object {
      "label": "input ::after on hover",
      "target": " .maxi-search-block__input:hover::after",
    },
    "n": Object {
      "label": "input ::after",
      "target": " .maxi-search-block__input::after",
    },
  },
  "b": Object {
    "h": Object {
      "label": "block on hover",
      "target": ":hover::block",
    },
    "n": Object {
      "label": "block",
      "target": "",
    },
  },
  "b b": Object {
    "h": Object {
      "label": "block ::block on hover",
      "target": ":hover::block",
    },
    "n": Object {
      "label": "block ::block",
      "target": "::block",
    },
  },
  "b bt": Object {
    "h": Object {
      "label": "button ::block on hover",
      "target": " .maxi-search-block__button:hover::block",
    },
    "n": Object {
      "label": "button ::block",
      "target": " .maxi-search-block__button::block",
    },
  },
  "b in": Object {
    "h": Object {
      "label": "input ::block on hover",
      "target": " .maxi-search-block__input:hover::block",
    },
    "n": Object {
      "label": "input ::block",
      "target": " .maxi-search-block__input::block",
    },
  },
  "bt": Object {
    "h": Object {
      "label": "button on hover",
      "target": " .maxi-search-block__button:hover",
    },
    "n": Object {
      "label": "button",
      "target": " .maxi-search-block__button",
    },
  },
  "ci": Object {
    "h": Object {
      "label": "icon on hover",
      "target": " .maxi-search-block__button__close-icon:hover",
    },
    "hoverInsideSvg": Object {
      "label": "everything inside svg on hover (:hover svg > *)",
      "target": " .maxi-search-block__button__close-icon:hover svg > *",
    },
    "hoverPath": Object {
      "label": "svg's path on hover",
      "target": " .maxi-search-block__button__close-icon:hover svg path",
    },
    "hoverSvg": Object {
      "label": "icon's svg on hover",
      "target": " .maxi-search-block__button__close-icon:hover svg",
    },
    "insideSvg": Object {
      "label": "everything inside svg (svg > *)",
      "target": " .maxi-search-block__button__close-icon svg > *",
    },
    "n": Object {
      "label": "icon",
      "target": " .maxi-search-block__button__close-icon",
    },
    "path": Object {
      "label": "svg's path",
      "target": " .maxi-search-block__button__close-icon svg path",
    },
    "svg": Object {
      "label": "icon's svg",
      "target": " .maxi-search-block__button__close-icon svg",
    },
  },
  "i": Object {
    "h": Object {
      "label": "icon on hover",
      "target": " .maxi-search-block__button__default-icon:hover",
    },
    "hoverInsideSvg": Object {
      "label": "everything inside svg on hover (:hover svg > *)",
      "target": " .maxi-search-block__button__default-icon:hover svg > *",
    },
    "hoverPath": Object {
      "label": "svg's path on hover",
      "target": " .maxi-search-block__button__default-icon:hover svg path",
    },
    "hoverSvg": Object {
      "label": "icon's svg on hover",
      "target": " .maxi-search-block__button__default-icon:hover svg",
    },
    "insideSvg": Object {
      "label": "everything inside svg (svg > *)",
      "target": " .maxi-search-block__button__default-icon svg > *",
    },
    "n": Object {
      "label": "icon",
      "target": " .maxi-search-block__button__default-icon",
    },
    "path": Object {
      "label": "svg's path",
      "target": " .maxi-search-block__button__default-icon svg path",
    },
    "svg": Object {
      "label": "icon's svg",
      "target": " .maxi-search-block__button__default-icon svg",
    },
  },
  "in": Object {
    "h": Object {
      "label": "input on hover",
      "target": " .maxi-search-block__input:hover",
    },
    "n": Object {
      "label": "input",
      "target": " .maxi-search-block__input",
    },
  },
  "pl in": Object {
    "h": Object {
      "label": "input ::placeholder on hover",
      "target": " .maxi-search-block__input:h::placeholder",
    },
    "n": Object {
      "label": "input ::placeholder",
      "target": " .maxi-search-block__input::placeholder",
    },
  },
}
`;

exports[`getBlockSelectorsByUniqueID Should return svg-icon selectors 1`] = `
Object {
  "a c": Object {
    "h": Object {
      "label": "canvas ::after on hover",
      "target": ":hover::after",
    },
    "n": Object {
      "label": "canvas ::after",
      "target": "::after",
    },
  },
  "b c": Object {
    "h": Object {
      "label": "canvas ::block on hover",
      "target": ":hover::block",
    },
    "n": Object {
      "label": "canvas ::block",
      "target": "::block",
    },
  },
  "c": Object {
    "h": Object {
      "label": "canvas on hover",
      "target": ":hover",
    },
    "n": Object {
      "label": "canvas",
      "target": "",
    },
  },
  "s": Object {
    "h": Object {
      "label": "svg on hover",
      "target": " .maxi-svg-icon-block__icon svg:hover",
    },
    "n": Object {
      "label": "svg",
      "target": " .maxi-svg-icon-block__icon svg",
    },
  },
}
`;

exports[`getBlockSelectorsByUniqueID Should return text selectors 1`] = `
Object {
  "a te": Object {
    "h": Object {
      "label": "text ::after on hover",
      "target": " .maxi-text-block__content:hover::after",
    },
    "n": Object {
      "label": "text ::after",
      "target": " .maxi-text-block__content::after",
    },
  },
  "b te": Object {
    "h": Object {
      "label": "text ::block on hover",
      "target": " .maxi-text-block__content:hover::block",
    },
    "n": Object {
      "label": "text ::block",
      "target": " .maxi-text-block__content::block",
    },
  },
  "ls": Object {
    "h": Object {
      "label": "links on hover",
      "target": " .maxi-text-block--link:hover",
    },
    "n": Object {
      "label": "links",
      "target": " .maxi-text-block--link",
    },
  },
  "or lt": Object {
    "h": Object {
      "label": "ordered list on hover",
      "target": " ol.maxi-text-block__content:hover",
    },
    "n": Object {
      "label": "ordered list",
      "target": " ol.maxi-text-block__content",
    },
  },
  "te": Object {
    "h": Object {
      "label": "text on hover",
      "target": " .maxi-text-block__content:hover",
    },
    "n": Object {
      "label": "text",
      "target": " .maxi-text-block__content",
    },
  },
  "te w": Object {
    "h": Object {
      "label": "text width on hover",
      "target": ":hover",
    },
    "n": Object {
      "label": "text width",
      "target": "",
    },
  },
  "u lt": Object {
    "h": Object {
      "label": "unordered list on hover",
      "target": " ul.maxi-text-block__content:hover",
    },
    "n": Object {
      "label": "unordered list",
      "target": " ul.maxi-text-block__content",
    },
  },
}
`;

exports[`getBlockSelectorsByUniqueID Should return video selectors 1`] = `
Object {
  "a c": Object {
    "h": Object {
      "label": "canvas ::after on hover",
      "target": ":hover::after",
    },
    "n": Object {
      "label": "canvas ::after",
      "target": "::after",
    },
  },
  "a ov": Object {
    "h": Object {
      "label": "overlay ::after on hover",
      "target": " .maxi-video-block__overlay:hover::after",
    },
    "n": Object {
      "label": "overlay ::after",
      "target": " .maxi-video-block__overlay::after",
    },
  },
  "a v": Object {
    "h": Object {
      "label": "video ::after on hover",
      "target": " .maxi-video-block__video-player:hover::after",
    },
    "n": Object {
      "label": "video ::after",
      "target": " .maxi-video-block__video-player::after",
    },
  },
  "b c": Object {
    "h": Object {
      "label": "canvas ::block on hover",
      "target": ":hover::block",
    },
    "n": Object {
      "label": "canvas ::block",
      "target": "::block",
    },
  },
  "b ov": Object {
    "h": Object {
      "label": "overlay ::block on hover",
      "target": " .maxi-video-block__overlay:hover::block",
    },
    "n": Object {
      "label": "overlay ::block",
      "target": " .maxi-video-block__overlay::block",
    },
  },
  "b v": Object {
    "h": Object {
      "label": "video ::block on hover",
      "target": " .maxi-video-block__video-player:hover::block",
    },
    "n": Object {
      "label": "video ::block",
      "target": " .maxi-video-block__video-player::block",
    },
  },
  "c": Object {
    "h": Object {
      "label": "canvas on hover",
      "target": ":hover",
    },
    "n": Object {
      "label": "canvas",
      "target": "",
    },
  },
  "ci": Object {
    "h": Object {
      "label": "close icon on hover",
      "target": " .maxi-video-block__close-button:hover",
    },
    "hoverInsideSvg": Object {
      "label": "everything inside svg on hover (:hover svg > *)",
      "target": " .maxi-video-block__close-button:hover svg > *",
    },
    "hoverPath": Object {
      "label": "svg's path on hover",
      "target": " .maxi-video-block__close-button:hover svg path",
    },
    "hoverSvg": Object {
      "label": "close icon's svg on hover",
      "target": " .maxi-video-block__close-button:hover svg",
    },
    "insideSvg": Object {
      "label": "everything inside svg (svg > *)",
      "target": " .maxi-video-block__close-button svg > *",
    },
    "n": Object {
      "label": "close icon",
      "target": " .maxi-video-block__close-button",
    },
    "path": Object {
      "label": "svg's path",
      "target": " .maxi-video-block__close-button svg path",
    },
    "svg": Object {
      "label": "close icon's svg",
      "target": " .maxi-video-block__close-button svg",
    },
  },
  "ov": Object {
    "h": Object {
      "label": "overlay on hover",
      "target": " .maxi-video-block__overlay:hover",
    },
    "n": Object {
      "label": "overlay",
      "target": " .maxi-video-block__overlay",
    },
  },
  "pi": Object {
    "h": Object {
      "label": "play icon on hover",
      "target": " .maxi-video-block__play-button:hover",
    },
    "hoverInsideSvg": Object {
      "label": "everything inside svg on hover (:hover svg > *)",
      "target": " .maxi-video-block__play-button:hover svg > *",
    },
    "hoverPath": Object {
      "label": "svg's path on hover",
      "target": " .maxi-video-block__play-button:hover svg path",
    },
    "hoverSvg": Object {
      "label": "play icon's svg on hover",
      "target": " .maxi-video-block__play-button:hover svg",
    },
    "insideSvg": Object {
      "label": "everything inside svg (svg > *)",
      "target": " .maxi-video-block__play-button svg > *",
    },
    "n": Object {
      "label": "play icon",
      "target": " .maxi-video-block__play-button",
    },
    "path": Object {
      "label": "svg's path",
      "target": " .maxi-video-block__play-button svg path",
    },
    "svg": Object {
      "label": "play icon's svg",
      "target": " .maxi-video-block__play-button svg",
    },
  },
  "v": Object {
    "h": Object {
      "label": "video on hover",
      "target": " .maxi-video-block__video-player:hover",
    },
    "n": Object {
      "label": "video",
      "target": " .maxi-video-block__video-player",
    },
  },
}
`;

exports[`getTransitionSetting Should return the IB setting 1`] = `
Object {
  "attrGroupName": "boxShadow",
  "component": [Function],
  "helper": [Function],
  "hoverProp": "bs.sh",
  "label": "Box shadow",
}
`;

exports[`getTransitionSetting Should return the IB setting, which has transitionTarget 1`] = `
Object {
  "attrGroupName": Array [
    "icon",
    "iconBackground",
    "iconBackgroundGradient",
    "iconBackgroundColor",
    "iconBorder",
    "iconBorderWidth",
    "iconBorderRadius",
    "iconPadding",
    "typography",
  ],
  "component": [Function],
  "helper": [Function],
  "hoverProp": "i.sh",
  "label": "Button icon",
  "transitionTarget": Array [
    "  .maxi-button-block__icon svg > *:not(g)",
    " .maxi-button-block__icon svg",
    " .maxi-button-block__icon",
    " .maxi-button-block__icon",
  ],
}
`;

exports[`handleBlockMigrator Should return a one element array 1`] = `
Array [
  "<p class=\\"test-migrators new-class\\" data-align=\\"full\\">Modified content</p>",
  "<p class=\\"test-migrators new-class\\" data-align=\\"full\\">test</p>",
  "<p class=\\"test-migrators new-class\\">Modified content</p>",
  "<p class=\\"test-migrators\\" data-align=\\"full\\">Modified content</p>",
  "<h1 class=\\"test-migrators new-class\\" data-align=\\"full\\">Modified content</h1>",
  "<p class=\\"test-migrators new-class\\">test</p>",
  "<p class=\\"test-migrators\\" data-align=\\"full\\">test</p>",
  "<h1 class=\\"test-migrators new-class\\" data-align=\\"full\\">test</h1>",
  "<p class=\\"test-migrators\\">Modified content</p>",
  "<h1 class=\\"test-migrators new-class\\">Modified content</h1>",
  "<h1 class=\\"test-migrators\\" data-align=\\"full\\">Modified content</h1>",
  "<p class=\\"test-migrators\\">test</p>",
  "<h1 class=\\"test-migrators new-class\\">test</h1>",
  "<h1 class=\\"test-migrators\\" data-align=\\"full\\">test</h1>",
  "<h1 class=\\"test-migrators\\">Modified content</h1>",
]
`;
